fixed with button firefox and chrome

--- a/src/app/pages/astropage/astropage.component.scss
+++ b/src/app/pages/astropage/astropage.component.scss
@@ -7,8 +7,7 @@ $fontFamily : 'nasalization';
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 100vh;
-    height: 100vh;
+    height: auto;
 }
 
 .astroStyle {
@@ -27,7 +26,7 @@ $fontFamily : 'nasalization';
 
 .listObsStyle {
 
-    padding: 0 9%;
+    padding: 0 10vw;
 
 }
 
